Add map and tests

--- a/app/templates/rentals.hbs
+++ b/app/templates/rentals.hbs
@@ -9,6 +9,17 @@
   {{/link-to}}
 </div>
 
-{{#each this.model as |rentalUnit|}}
+{{!-- {{#each this.model as |rentalUnit|}}
   <Rental-Listing @rental={{rentalUnit}} />
-{{/each}}
+{{/each}} --}}
+<List-Filter
+ @filter={{action "filterByCity"}}
+as |filteredResults|
+>
+    <ul class="results">
+    {{#each filteredResults as |rentalUnit|}}
+      <li><Rental-Listing @rental={{rentalUnit}} /></li>
+    {{/each}}
+  </ul>
+</List-Filter>
+{{outlet}}
