--- a/app/templates/components/rental-listing.hbs
+++ b/app/templates/components/rental-listing.hbs
@@ -21,5 +21,6 @@
     <div class="detail bedrooms">
       <span>Number of bedrooms:</span> {{this.rental.bedrooms}}
     </div>
-  </div>
+    <Location-Map @location={{this.rental.city}} />
+  </div> 
 </article>
