--- a/app/templates/rentals/show.hbs
+++ b/app/templates/rentals/show.hbs
@@ -2,7 +2,11 @@
   <h2 class="title">{{this.model.title}}</h2>
   <div class="content">
     <div>
-      <img src={{this.model.image}} class="rental-pic" alt="Picture of {{this.model.title}}">
+      <img
+        src={{this.model.image}}
+        class="rental-pic"
+        alt="Picture of {{this.model.title}}"
+      >
     </div>
     <div class="detail-section">
       <div class="detail owner">
