--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -6,10 +6,7 @@
     By building a property rental site, we can simultaneously imagine traveling
     AND building Ember applications.
   </p>
-  {{#link-to "contact" class="button"}}
-  Contact us
+  {{#link-to "index" class="button"}}
+    Get Started!
   {{/link-to}}
-
 </div>
-
-{{outlet}}
