--- a/app/templates/components/rental-listing.hbs
+++ b/app/templates/components/rental-listing.hbs
@@ -1,14 +1,15 @@
 <article class="listing">
-  <a 
-  onclick={{action "toggleImageSize"}} 
-  class="image {{if this.isWide "wide"}}" 
-  role="button"
+  <a
+    onclick={{action "toggleImageSize"}}
+    class="image {{if this.isWide "wide"}}"
+    role="button"
   >
     <img src={{this.rental.image}} alt="">
     <small>View Larger</small>
   </a>
   <div class="details">
-    <h3>{{#link-to "rentals.show" rental class=rental.id}}{{this.rental.title}}{{/link-to}}</h3>    <div class="detail owner">
+    <h3>{{link-to this.rental.title "rentals.show" this.rental class=this.rental.id}}</h3>
+    <div class="detail owner">
       <span>Owner:</span> {{this.rental.owner}}
     </div>
     <div class="detail type">
@@ -20,6 +21,6 @@
     <div class="detail bedrooms">
       <span>Number of bedrooms:</span> {{this.rental.bedrooms}}
     </div>
-    <Location-Map class="map" @location={{this.rental.city}} />
-  </div> 
+    {{!-- <Location-Map @location={{this.rental.city}}/> --}}
+  </div>
 </article>
